# Lex-Amoris-

./: .gitignore  AI HITL evidence  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_DEPLOYMENT.md  DEPLOYMENT.md  Euystacio Agent  FAQ Euystacio framework  Fairness-as-a-vacuum-bruecke  Future proof stability  Golden rule sync.md  HANNES_MITTERER_ROOT.py  IMPLEMENTATION.md  In consensus amoris  Meta AI S-ROI  Meta-AI-SROI  NSR Matrix.txt  NSR-Impact  Omnibus in aeternuum  Paradossi IA  Piezo Effekt  README.md  SECURITY.md  Ur_algoritmo_sroi.md  VERIFICATION.md  compliance-status.json  g-csi-compliance.json  index.html  ipfs-anchoring.json  key-trust-protocol.json  living-covenant.json  mkdocs.yml  nsr-enforcement.json  pyproject.toml  trust-anchors.json  verify-compliance.sh
.github/workflows/: ci.yml  deploy-pages.yml  pages.yml  release.yml  verify-compliance.yml
docs/: api.md  changelog.md  contributing.md  dashboard.md  euystacio.md  examples.md  framework.md  index.md  ipfs-anchoring.md  principles.md  quantum_bridge_logic.md
examples/: quantum_bridge_demo.py
kubernetes/watcher/: 01-deployment.yaml  (+7 more)
lex_amoris/: __init__.py
lex_amoris.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
monitoring/: Resonance check.py  __init__.py  resonance_check.py  sentimento_rhythm.py
sroi/: persistence.py
tests/: test_framework.py  test_quantum_bridge_logic.py
vacuum_node/: .gitignore  CONSENSUS.md  Dockerfile  QUICKSTART.md  README.md  UPGRADE_SUMMARY.md  consensus.py  crypto.py  docker-compose.yml  example.py  fairness.py  generate-keys.sh  ipfs_anchor.py  main.py  model.py  peers.json  requirements.txt  test_consensus.py  test_network.py  verify.py
(+13 files in other folders)
